// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingSpinner /> UI snapshots renders the correct css with custom props 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(150px,0,0);
    -ms-transform: translate3d(150px,0,0);
    transform: translate3d(150px,0,0);
  }

  50% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(-150px,0,0);
    -ms-transform: translate3d(-150px,0,0);
    transform: translate3d(-150px,0,0);
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: #000000;
}

.emotion-0 {
  display: block;
  height: 20px;
  width: 20px;
  background-color: #FFFFFF;
  border-radius: 50%;
  opacity: 0;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 4s;
  animation-duration: 4s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.emotion-0:nth-of-type(1) {
  -webkit-animation-delay: -3s;
  animation-delay: -3s;
}

.emotion-0:nth-of-type(2) {
  -webkit-animation-delay: -2s;
  animation-delay: -2s;
}

.emotion-0:nth-of-type(3) {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

<div
  class="emotion-8 emotion-9"
>
  <div
    class="emotion-6 emotion-7"
  >
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
  </div>
</div>
`;

exports[`<LoadingSpinner /> UI snapshots renders the correct css with default props 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100px,0,0);
    -ms-transform: translate3d(100px,0,0);
    transform: translate3d(100px,0,0);
  }

  50% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(-100px,0,0);
    -ms-transform: translate3d(-100px,0,0);
    transform: translate3d(-100px,0,0);
  }
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: #F8F8FA;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  display: block;
  height: 14px;
  width: 14px;
  background-color: #332E54;
  border-radius: 50%;
  opacity: 0;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.emotion-0:nth-of-type(1) {
  -webkit-animation-delay: -1.5s;
  animation-delay: -1.5s;
}

.emotion-0:nth-of-type(2) {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.emotion-0:nth-of-type(3) {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}

<div
  class="emotion-8 emotion-9"
>
  <div
    class="emotion-6 emotion-7"
  >
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-0 emotion-1"
    />
  </div>
</div>
`;
